--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,8 @@ set(CMAKE_C_STANDARD 99)
 SET_SOURCE_FILES_PROPERTIES(module.h.c PROPERTIES LANGUAGE CXX)
 SET_SOURCE_FILES_PROPERTIES(str_mbl.c PROPERTIES LANGUAGE CXX)
 SET_SOURCE_FILES_PROPERTIES(str_mbl.h PROPERTIES LANGUAGE CXX)
+SET_SOURCE_FILES_PROPERTIES(main.c PROPERTIES LANGUAGE CXX)
+SET_SOURCE_FILES_PROPERTIES(testing_functions.c PROPERTIES LANGUAGE CXX)
+SET_SOURCE_FILES_PROPERTIES(testing_functions.h PROPERTIES LANGUAGE CXX)
 
-add_executable(Evgenii_Onegin main.c module.h str_mbl.h str_mbl.c)
+add_executable(Evgenii_Onegin main.c module.h str_mbl.h str_mbl.c testing_functions.c testing_functions.h)
